# CLI-Chat

./: README.md
chat_client/: Cargo.toml
chat_client/src/: main.rs  message.rs
chat_server/: Cargo.toml
chat_server/src/: main.rs  request.rs
