[package]
name = "chat_server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
threadpool = "1.0"
bincode = "1.2.1"
serde = { version = "1", features = ["derive"] }
ctrlc = "3.2"
lazy_static = "1.4.0"

# crossbeam-channel = "0.5.1"
# tokio = { version = "1.12.0", features = ["rt-multi-thread"] }